force-app/zurich-ze-app/main/default/objects/Business_Quotes_Field__mdt/Business_Quotes_Field__mdt.object-meta.xml
<CustomObject>
    <description>Registros para cada uno de los campos recibidos por la integración del formulario web de Zurich Empresas</description>
    <label>Business Quotes Field</label>
    <pluralLabel>Business Quotes Fields</pluralLabel>
</CustomObject>