force-app/zurich-ze-app/main/default/objects/Business_Quotes_Field__mdt/fields/FormSteps__c.field-meta.xml
<CustomField>
    <fullName>FormSteps__c</fullName>
    <description>Paso o pasos del formulario en el que es requerido el campo</description>
    <label>Form Steps</label>
    <length>255</length>
    <type>Text</type>
</CustomField>