force-app/zurich-ze-app/main/default/objects/Business_Quotes_Field__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si el campo viene en el JSON del formulario o no</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>