force-app/zurich-ze-app/main/default/objects/Business_Quotes_Field__mdt/fields/OriginEntity__c.field-meta.xml
<CustomField>
    <fullName>OriginEntity__c</fullName>
    <description>Entidad a la que pertenece el campo en el JSON recibido</description>
    <label>Origin Entity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>