force-app/zurich-ze-app/main/default/objects/Business_Quotes_Field__mdt/fields/OriginField__c.field-meta.xml
<CustomField>
    <fullName>OriginField__c</fullName>
    <description>Nombre del campo en el JSON recibido</description>
    <label>Origin Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>