force-app/zurich-ze-app/main/default/objects/Business_Quotes_Field__mdt/fields/Required__c.field-meta.xml
<CustomField>
    <fullName>Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si el campo es obligatorio para poder procesar la información correctamente</description>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>