force-app/zurich-ze-app/main/default/objects/Business_Quotes_Field__mdt/fields/SalesforceEntity__c.field-meta.xml
<CustomField>
    <fullName>SalesforceEntity__c</fullName>
    <description>Entidad de Salesforce a la que se corresponde y pertenece el campo</description>
    <label>Salesforce Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Account</fullName>
                <default>true</default>
                <label>Account</label>
            </value>
            <value>
                <fullName>Asset</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Task</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>