force-app/zurich-ze-app/main/default/objects/Business_Quotes_Field__mdt/fields/SalesforceField__c.field-meta.xml
<CustomField>
    <fullName>SalesforceField__c</fullName>
    <description>Nombre API del campo de Salesforce al que corresponde el campo</description>
    <label>Salesforce Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>