force-app/zurich-ze-app/main/default/objects/Business_Quotes_Field__mdt/listViews/AllInformation.listView-meta.xml
<ListView>
    <fullName>AllInformation</fullName>
    <columns>MasterLabel</columns>
    <columns>OriginEntity__c</columns>
    <columns>OriginField__c</columns>
    <columns>SalesforceEntity__c</columns>
    <columns>SalesforceField__c</columns>
    <columns>Type__c</columns>
    <columns>Required__c</columns>
    <columns>IsActive__c</columns>
    <columns>FormSteps__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Information</label>
    <language>en_US</language>
</ListView>